...
            Table(
                modifier = Modifier.fillMaxSize(),
                rowModifier = Modifier.fillMaxWidth().bottomBorder(1.dp, color = Color.LightGray),
                rowCount = services.value.size,
                headers = listOf("Service", "Username", "Password", "Note"),
                cellContent = { columnIndex, rowIndex ->
                    val service = services.value[rowIndex]
                    displayService(service, columnIndex)
                },
                beforeRow = { row ->
                    val service = services.value[row]
                    Row {
                        Icon(Icons.Default.Edit,
...
    val serviceModel by localDI().instance<Services>()
    val navController by localDI().instance<NavController>()

    val service = remember {
        mutableStateOf(TextFieldValue(originalService.service))
    }
    val username = remember {
        mutableStateOf(TextFieldValue(originalService.username))
    }
    val password = remember {
        mutableStateOf(TextFieldValue(originalService.password))
    }
    val note = remember {
        mutableStateOf(TextFieldValue(originalService.note))
    }
    val dirty = remember {
        mutableStateOf(false)
    }
    val tags = remember {
        mutableStateOf(originalService.tags.toSet())
    }

    val clock: Clock by localDI().instance()
    Row(Modifier.padding(16.dp)) {
        Column(modifier = Modifier.width(600.dp)) {
...
                },
                modifier = Modifier.fillMaxWidth().align(Alignment.CenterHorizontally)
                    .testTag("note")
            )
            Row(Modifier.align(Alignment.CenterHorizontally)) {
                Button(
                    modifier = Modifier.testTag("submit"),
                    onClick = {
                        val user = serviceModel.user
                        val newService = if (originalService.service.isEmpty()) {
                            Service(
                                service = service.value.text,
                                username = username.value.text,
...
